--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           </div>
         </div>
         <div class="glass rounded-2xl p-6 border border-white/10">
-          <img src="https://raw.githubusercontent.com/appestoicismo/emagrecimento/refs/heads/main/desconto%20valido%20hoje1.png" alt="Vagas limitadas" class="rounded-xl w-full h-[420px] object-cover"/>
+          <img src="https://raw.githubusercontent.com/LeadAlvoCerto/mcacantonfair/refs/heads/main/11.jpeg" alt="Vagas limitadas" class="rounded-xl w-full h-[420px] object-cover"/>
         </div>
       </div>
     </section>
@@ -275,12 +275,12 @@
               </form>
             </div>
             <div class="mt-4 flex items-center gap-3">
-              <img src="https://github.com/appestoicismo/app-autoconhecimento-images/blob/main/fundo_form.jpg?raw=1" alt="Suporte" class="h-12 w-12 rounded-lg object-cover"/>
+              <img src="https://raw.githubusercontent.com/LeadAlvoCerto/mcacantonfair/refs/heads/main/1.jpeg" alt="Suporte" class="h-12 w-12 rounded-lg object-cover"/>
               <p class="text-sm text-white/60">Preferir chamar direto? <a href="https://wa.me/5519974010028" target="_blank" class="text-red-400 hover:text-red-300 font-medium">WhatsApp: (19) 97401-0028</a></p>
             </div>
           </div>
           <div class="glass rounded-2xl p-6 border border-white/10">
-            <img src="https://github.com/appestoicismo/app-autoconhecimento-images/blob/main/cantonfair_header.jpg?raw=1" alt="Canton Fair" class="rounded-xl w-full h-[520px] object-cover"/>
+            <img src="https://raw.githubusercontent.com/LeadAlvoCerto/mcacantonfair/refs/heads/main/1.jpeg" alt="Canton Fair" class="rounded-xl w-full h-[520px] object-cover"/>
           </div>
         </div>
       </div>
